Sat Aug 14 19:15:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>

	* === Released 2.4.7 ===

2004-08-13  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.6 ===

Thu Aug 12 00:06:20 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtkuimanager.sgml: Add some information about
	allowed values for the name and action attributes.

2004-08-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tmpl/gtkrc.sgml: Fix a typo.  (#149470, Mariano
	Suarez-Alvarez)

2004-07-13  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtk-sections.txt: Add gtk_parse_args.

2004-07-12  Federico Mena Quintero  <federico@ximian.com>

	Merged from HEAD:

	* gtk/glossary.xml: Start of the GTK+ glossary.

	* gtk/Makefile.am (content_files): Added glossary.xml.

	* gtk/gtk-docs.sgml: Likewise.

2004-07-10  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.4 ===

Sat Jul  3 23:44:45 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtksocket.sgml: 
	* gtk/tmpl/gtkicontheme.sgml: 
	* gtk/building.sgml: 
	* gdk/tmpl/windows.sgml: Fix links to www.freedesktop.org.  
	(#145210, Billy Biggs)

Tue Jun 22 21:54:24 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf/composite.dia: 
	* gdk-pixbuf/composite.png: Flip the y axes in the diagrams. 

Sun Jun 20 00:17:58 2004  Matthias Clasen  <maclas@gmx.de>

	* gdk-pixbuf/composite.png: Add a figure which tries
	to expain pixbuf compositing.
	
	* gdk-pixbuf/composite.dia: 
	* gdk-pixbuf/apple-red-1a.png: 
	* gdk-pixbuf/apple-red-2c.png: 
	* gdk-pixbuf/gnome-gmush-1.png: Sources for composite.png.
	
	* gdk-pixbuf/Makefile.am (HTML_IMAGES): Add composite.png.

Fri Jun 18 21:23:08 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/tmpl/gtktreemodelfilter.sgml: Fix the docs for
	GtkTreeModelFilterVisibleFunc.  (#144583, Olivier Andrieu)

2004-06-11  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.3 ===

2004-06-04  Matthias Clasen  <mclasen@redhat.com>

	* === Released 2.4.2 ===
