@@ -1,3 +1,8 @@
+2004-08-24  Matthias Clasen  <mclasen@redhat.com>
+
+	* gdk-pixbuf/gdk-pixbuf-csource.xml: Document bugs of
+	the runlength encoder.
+
 Sat Aug 14 19:15:08 2004  Soeren Sandmann  <sandmann@daimi.au.dk>
 
 	* === Released 2.4.7 ===
